# orion

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTES.txt  README.md  SECURITY.md  clippy.toml  envoy-bootstrap.yaml  orion.logs  setup-backend-cluster.sh
envoy-data-plane-api/: Cargo.toml  build.rs
envoy-data-plane-api/src/: lib.rs
orion-configuration/: Cargo.toml
orion-configuration/examples/: convert.rs  custom_typed_struct_filter.rs
orion-configuration/src/: config.rs  lib.rs  main.rs  options.rs
orion-configuration/src/config/: bootstrap.rs  cluster.rs  common.rs  core.rs  grpc.rs  listener.rs  listener_filters.rs  log.rs  metrics.rs  network_filters.rs  runtime.rs  secret.rs  transport.rs  util.rs
orion-configuration/src/config/cluster/: cluster_specifier.rs  health_check.rs  http_protocol_options.rs
orion-configuration/src/config/network_filters/: access_log.rs  http_connection_manager.rs  network_rbac.rs  tcp_proxy.rs  tracing.rs
orion-configuration/src/typed_struct/: converter.rs  error.rs  mod.rs  parser.rs  registry.rs
orion-configuration/tests/: connect_method_integration.rs  set_filter_state_integration.rs  test_configuration.rs  test_internal_listener.rs  typed_struct_integration.rs
orion-configuration/tests/set_filter_state/: istio_waypoint_config.yaml
orion-data-plane-api/: Cargo.toml
orion-data-plane-api/src/: decode.rs  lib.rs
orion-data-plane-api/src/bootstrap_loader/: bootstrap.rs  mod.rs
orion-data-plane-api/src/envoy_validation/: mod.rs
orion-data-plane-api/src/xds/: bindings.rs  client.rs  mod.rs  model.rs
orion-data-plane-api/tests/: bootstrap.rs  envoy_validation.rs  xds.rs
orion-format/: Cargo.toml
orion-format/benches/: benchmark.rs
orion-format/src/: context.rs  envoy.rs  grammar.rs  lib.rs  operator.rs  smol_cow.rs  token.rs  types.rs
orion-internal/: Cargo.toml
orion-internal/src/: connection.rs  connector.rs  filter_state.rs  lib.rs
orion-internal/tests/: integration_tests.rs
orion-lib/: Cargo.toml
orion-lib/src/: access_log.rs  event_error.rs  filter_state.rs  format_string.rs  lib.rs  thread_local.rs  utils.rs
orion-lib/src/access_log/: deferred_init.rs  log_writer.rs  logger.rs  pool.rs
orion-lib/src/body/: body_with_metrics.rs  body_with_timeout.rs  channel_body.rs  mod.rs  poly_body.rs  response_flags.rs  timeout_body.rs
orion-lib/src/clusters/: cached_watch.rs  cluster.rs  clusters_manager.rs  load_assignment.rs  mod.rs  retry_policy.rs
orion-lib/src/clusters/balancers/: default_balancer.rs  hash_policy.rs  healthy.rs  least.rs  maglev.rs  mod.rs  override_host.rs  priority.rs  random.rs  ring.rs  wrr.rs
orion-lib/src/clusters/cluster/: dynamic.rs  original_dst.rs  static.rs
orion-lib/src/clusters/health/: counter.rs  manager.rs  mod.rs
orion-lib/src/configuration/: mod.rs
orion-lib/src/listeners/: access_log.rs  drain_signaling.rs  filter_state.rs  filterchain.rs  http_connection_manager.rs  lds_update.rs  listener.rs  listeners_manager.rs  mod.rs  synthetic_http_response.rs  tcp_proxy.rs
orion-lib/src/listeners/http_connection_manager/: direct_response.rs  ext_proc.rs  http_modifiers.rs  mcp_route.rs  redirect.rs  route.rs  set_filter_state.rs  upgrade.rs  upgrades.rs
orion-lib/src/listeners/rate_limiter/: mod.rs  token_bucket.rs
orion-lib/src/mcp/: filters.rs  handler.rs  json.rs  mergestream.rs  mod.rs  router.rs  session.rs  streamablehttp.rs
orion-lib/src/mcp/upstream/: mod.rs  response_channel.rs  sse.rs  stdio.rs  streamablehttp.rs
orion-lib/src/observability/: mod.rs  opentelemetry.rs  prometheus_server.rs
orion-lib/src/observability/opentelemetry/: metric_exporters.rs
orion-lib/src/secrets/: mod.rs  secrets_manager.rs
orion-lib/src/secrets/tls_configurator/: configurator.rs  mod.rs  tls_configurator_builder.rs
orion-lib/src/trace/: mod.rs  request_id.rs  trace_id.rs  tracer.rs
orion-lib/src/transport/: bind_device.rs  connector.rs  grpc_channel.rs  http_channel.rs  internal_cluster_connector.rs  internal_connection.rs  mod.rs  policy.rs  proxy_protocol.rs  request_context.rs  resolver.rs  tcp_channel.rs  tls_inspector.rs  tlv_listener_filter.rs  transport_socket.rs
orion-lib/src/utils/: http.rs  mod.rs  rewindable_stream.rs  tokio.rs
orion-lib/tests/: internal_connection_integration.rs
orion-mcp/: Cargo.toml
orion-mcp/src/: handler.rs  json.rs  lib.rs  mergestream.rs  metrics.rs  rbac.rs  router.rs  session.rs  sse.rs  streamablehttp.rs
orion-mcp/src/upstream/: mod.rs  sse.rs  stdio.rs  streamablehttp.rs
orion-mcp/src/upstream/openapi/: mod.rs  test.rs
orion-metrics/: Cargo.toml
orion-metrics/src/: lib.rs  macros.rs  metrics.rs  sharded.rs
orion-metrics/src/metrics/: clusters.rs  http.rs  listeners.rs  server.rs  tcp.rs  tls.rs
orion-proxy/: Cargo.toml
orion-proxy/conf/: bootstrap-with-keys.yaml  envoy-bootstrap-dyn.yaml  envoy-bootstrap-tlv-demo.yaml  envoy-rev.json  envoy-rev.yaml  envoy-runtime-empty.yaml  envoy-runtime-pipe.yaml  orion-conf.yaml  orion-runtime-bare.yaml  orion-runtime-mcp-stdio-github.yaml  orion-runtime-mcp.yaml  orion-runtime-pipe-new.yaml_ignore  orion-runtime-pipe.yaml  orion-runtime-tlv-demo.yaml  orion-runtime-weighted-clusters.yaml  orion-runtime.yaml
orion-proxy/src/: admin.rs  core_affinity.rs  lib.rs  main.rs  proxy.rs  runtime.rs  signal.rs  xds_configurator.rs
orion-proxy/src/admin/: config_dump.rs  prometheus.rs
orion-proxy/tests/: configs.rs
orion-tracing/: Cargo.toml
orion-tracing/src/: attributes.rs  http_tracer.rs  lib.rs  request_id.rs  span_state.rs  trace_context.rs  trace_info.rs
orion-xds/: Cargo.toml  README.md
orion-xds/examples/: README.md  client.rs  server.rs  server_routes_and_loads.rs  server_secret_rotation.rs  server_secret_rotation_simple.rs
orion-xds/src/: lib.rs
orion-xds/src/xds/: bindings.rs  client.rs  mod.rs  model.rs  request.rs  server.rs
orion-xds/tests/: bootstrap.rs  envoy_validation.rs  xds.rs
tools/hyper_unix_listener/: Cargo.toml
tools/hyper_unix_listener/src/: main.rs
(+118 files in other folders)
