[package]
description            = "Envoy xDS protobuf and gRPC definitions"
edition.workspace      = true
license-file.workspace = true
name                   = "envoy-data-plane-api"
rust-version.workspace = true
version.workspace      = true

[dependencies]
prost.workspace         = true
prost-reflect.workspace = true
serde.workspace         = true
serde_json.workspace    = true
serde_yaml.workspace    = true
tonic.workspace         = true
tonic-health.workspace  = true

[build-dependencies]
glob                    = "^0.3"
prost-build.workspace   = true
prost-reflect.workspace = true
tonic-build.workspace   = true


[lib]
doctest = false
