[package]
edition.workspace = true
license-file.workspace = true
name = "orion-configuration"
rust-version.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
base64-serde = "0.8.0"
bounded-integer = { version = "0.6.1", features = ["serde1"] }
bytes.workspace = true
clap = { version = "4.5.51", features = ["derive"] }
compact_str.workspace = true
exponential-backoff.workspace = true
http.workspace = true
http-serde-ext = "1.0.2"
humantime-serde = "1.1.1"
ipnet = { version = "2.11", features = ["serde"] }
itertools = "0.14.0"
num_cpus.workspace = true
num-traits = "0.2.19"
opentelemetry-otlp.workspace=true
orion-data-plane-api = { workspace = true, optional = true }
orion-error.workspace = true
orion-format.workspace = true
orion-interner.workspace = true
prost = "0.14.1"
prost-types = "0.14.1"
regex.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
serde_path_to_error = "0.1.20"
serde_regex = "1.1.0"
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "std"] }
url.workspace = true


[dev-dependencies]
tracing-test.workspace = true
tempfile = "3.23"

[features]
default = ["envoy-conversions"]
envoy-conversions = ["dep:orion-data-plane-api"]

[lib]
doctest = false

[lints]
workspace = true
