[package]
name = "orion-data-plane-api"

edition.workspace      = true
license-file.workspace = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
anyhow                         = "1"
async-stream                   = "^0.3.6"
envoy-data-plane-api.workspace = true
futures.workspace              = true
serde.workspace                = true
serde_yaml.workspace           = true
thiserror.workspace            = true
tokio.workspace                = true
tokio-stream.workspace         = true
tower.workspace                = true
tracing.workspace              = true

[dev-dependencies]
orion-hyper-util.workspace     = true
