[package]
name = "orion-format"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
http.workspace = true
thiserror.workspace = true

criterion = "0.5.1"
lazy_static = "1.5.0"
ptrie = "0.7.2"
smol_str = "0.3.2"
chrono = "0.4.40"
dhat = "0.3.3"
bitflags = "2.9.0"
itoa = "1.0.15"

[features]
dhat-heap = []

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
panic = 'unwind'
incremental = false
rpath = false

[[bench]]
name = "benchmark"
harness = false

[[bin]]
name = "format-test"
path = "src/bin/format-test.rs"
