[package]
edition.workspace = true
license-file.workspace = true
name = "orion-lib"
rust-version.workspace = true
version.workspace = true

[dependencies]
abort-on-drop.workspace = true
bytes.workspace = true
compact_str.workspace = true
exponential-backoff.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
opentelemetry.workspace = true
hyper-util.workspace = true
orion-configuration.workspace = true
orion-data-plane-api.workspace = true
orion-error.workspace = true
orion-format.workspace = true
orion-http-header.workspace = true
orion-interner.workspace = true
orion-metrics.workspace = true
orion-tracing.workspace = true
orion-xds.workspace = true
bounded-integer.workspace = true
ppp.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
ahash = "0.8.12"
arc-swap = "1.7.1"
arrayvec = "0.7.6"
async-stream = "0.3"
atomic-time = "0.1.5"
enum_dispatch = "0.3.13"
futures-util = { version = "0.3", default-features = false }
h2 = "0.4.12"
hickory-resolver = { version = "0.25", features = ["system-config","tokio"] }
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27.7", features = ["default", "http2"] }
if-addrs = "0.14"
ipnet = "2.11"
lru_time_cache = "0.11.11"
multimap = "0.10.1"
once_cell = { version = "1.21" }
parking_lot = "0.12.5"
pin-project = "1.1.10"
pingora-timeout = "0.6.0"
pretty-duration = "0.1.1"
rand = { version = "0.9.2", features = ["small_rng"] }
rustc-hash = "2.1.1"
rustls = "0.23"
rustls-pemfile = "2.2"
rustls-platform-verifier = { version = "0.6" }
rustls-webpki = "0.103"
scopeguard = "1.2.0"
socket2 = "0.6"
smol_str = "0.3.2"
thread-id = "5.0.0"
thread_local = "1.1.9"
tokio-rustls = "0.26"
tower-service = "0.3.3"
traceparent = "0.0.3"
tracing-appender = "0.2.3"
twox-hash = "2.1.2"
typed-builder = "0.23.1"
uuid = { version = "1.18.1", features = ["v4"] }
x509-parser = { version = "0.18", features = ["default"] }
hyperlocal = "0.9.1"
tokio-util = "0.7.17"
atomic_enum = "0.3.0"
assert_matches = "1.5.0"
test-log = "0.2.18"


[dev-dependencies]
orion-data-plane-api.workspace = true
serde_yaml.workspace = true
tracing-test.workspace = true

[features]
# making sure we are not using pure ring
aws_lc_rs = ["rustls/aws_lc_rs"]
default = ["aws_lc_rs"]
metrics = ["orion-metrics/metrics"]

[lints]
workspace = true
