[package]
edition.workspace      = true
license-file.workspace = true
name                   = "orion-metrics"
rust-version.workspace = true
version.workspace      = true

[features]
jemalloc = ["dep:tikv-jemalloc-ctl"]
metrics  = []

[dependencies]
ahash = "0.8.12"
dashmap = "6.1.0"
http.workspace = true
memory-stats = "1.2.0"
nohash = "0.2.0"
opentelemetry.workspace = true
opentelemetry-otlp.workspace =true
opentelemetry_sdk.workspace = true
orion-configuration.workspace = true
orion-interner.workspace = true
parking_lot = "0.12.5"
serde.workspace = true
thread-id = "5.0.0"
tikv-jemalloc-ctl = { version = "0.6.1", optional = true, features = ["stats"] }
tracing.workspace = true
tracing-subscriber.workspace = true
