[package]
edition.workspace      = true
license-file.workspace = true
name                   = "orion-proxy"
rust-version.workspace = true
version.workspace      = true


[[bin]]
name = "orion"
path = "src/main.rs"

[features]
config-dump = []
dhat-heap   = ["dep:dhat"]
jemalloc    = ["dep:tikv-jemallocator", "orion-metrics/jemalloc"]
metrics     = ["orion-metrics/metrics"]
prometheus  = ["metrics"]
tracing     = []

[dependencies]
abort-on-drop.workspace        = true
dhat                           = { version = "0.3.3", optional = true }
futures.workspace              = true
num_cpus.workspace             = true
orion-configuration.workspace  = true
orion-error.workspace          = true
orion-format.workspace         = true
orion-lib.workspace            = true
orion-metrics.workspace        = true
orion-tracing.workspace        = true
orion-xds.workspace            = true
parking_lot                    = "0.12.3"
tokio.workspace                = true
tower.workspace                = true
tracing.workspace              = true

affinity = "0.1.2"
axum = "0.8.1"
compact_str.workspace = true
http.workspace = true
opentelemetry = "0.29.0"
prometheus = { version = "0.14.0", features = ["process"] }
regex = "1.10.2"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0.140"
thiserror.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { workspace = true, features = [
  "alloc",
  "env-filter",
  "fmt",
  "registry",
  "std",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[dev-dependencies]
axum-test              = "17.2.0"
orion-data-plane-api.workspace = true
tracing-test.workspace = true

[lints]
workspace = true
