[package]
edition.workspace      = true
license-file.workspace = true
name                   = "orion-proxy"
rust-version.workspace = true
version.workspace      = true


[[bin]]
name = "orion"
path = "src/main.rs"

[features]
default = ["prometheus", "config-dump"]
config-dump = []
dhat-heap   = ["dep:dhat"]
jemalloc    = ["dep:tikv-jemallocator", "orion-metrics/jemalloc"]
metrics     = ["orion-metrics/metrics"]
prometheus  = ["metrics"]
tracing     = []

[dependencies]
abort-on-drop.workspace        = true
dhat                           = { version = "0.3.3", optional = true }
futures.workspace              = true
num_cpus.workspace             = true
orion-configuration.workspace  = true
orion-error.workspace          = true
orion-format.workspace         = true
orion-lib.workspace            = true
orion-metrics.workspace        = true
orion-tracing.workspace        = true
orion-xds.workspace            = true
parking_lot                    = "0.12.5"
tokio.workspace                = true
tower.workspace                = true
tracing.workspace              = true
pingora-timeout                = "0.3.0"


axum = "0.8.6"
compact_str.workspace = true
http.workspace = true
opentelemetry.workspace = true
prometheus = { version = "0.14.0", features = ["process"] }
regex = "1.12.2"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0.145"
thiserror.workspace = true
tracing-appender = "0.2"
tracing-subscriber = { workspace = true, features = [
  "alloc",
  "env-filter",
  "fmt",
  "registry",
  "std",
] }
tokio-util = "0.7.16"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
affinity = "0.1.2"

[dev-dependencies]
axum-test              = "17.3.0"
orion-data-plane-api.workspace = true
tracing-test.workspace = true

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[lints]
workspace = true
