[package]
name = "orion-tracing"
version = "0.1.0"
edition = "2021"

[features]
tracing = []

[dependencies]
orion-http-header.workspace = true
orion-interner.workspace = true
orion-configuration.workspace = true
orion-error.workspace = true

bounded-integer.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
compact_str.workspace = true
thiserror.workspace = true
http.workspace = true

opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = [
    "tonic",
    "tokio",
    "grpc-tonic",
    "hyper-client",
    "serde",
    "serde_json",
    "serialize",
    "http-json",
] }

opentelemetry_sdk = "0.29.0"
parking_lot = "0.12.3"
thread-id = "5.0.0"
arc-swap = "1.7.1"
smol_str = "0.3.2"
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.9.2"
arrayvec = "0.7.6"
traceparent = "0.0.3"
