[package]
edition = "2021"
name = "orion-xds"
publish = ["rust-inhuawei-com"]
version = "0.1.0"

[dependencies]
bytes.workspace                = true
futures.workspace              = true
http.workspace                 = true
orion-configuration.workspace  = true
orion-data-plane-api.workspace = true
orion-error.workspace          = true
serde.workspace                = true
tokio.workspace                = true
tower.workspace                = true
tracing.workspace              = true

async-stream = "0.3"
atomic-take  = "1.1.0"

thiserror              = { workspace = true }
tokio-stream.workspace = true
uuid                   = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
serde_yaml.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
